--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<title>Tree</title>
 </head>
 <body>
-	<div>
+	<div id="height">
 	    <input type="text" style="width: 40%" placeholder="How tall should the tree be?">
 	</div>
-	<div>
+	<div id="style">
 	    <input type="text" style="width: 40%" placeholder="Which character should be used?">
 	</div>
 
-	<button>Grow your tree</button>
+	<button id="grow">Grow your tree</button>
 <script src="main.js"></script>
 </body>
 </html>
