--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<title>Tree</title>
 </head>
 <body>
-	<div id="height">
-	    <input type="text" style="width: 40%" placeholder="How tall should the tree be?">
+	<div>
+	    <input id="height" type="text" style="width: 40%" placeholder="How tall should the tree be?">
 	</div>
-	<div id="style">
-	    <input type="text" style="width: 40%" placeholder="Which character should be used?">
+	<div>
+	    <input id="style" type="text" style="width: 40%" placeholder="Which character should be used?">
 	</div>
 
 	<button id="grow">Grow your tree</button>
